--- a/package.json
+++ b/package.json
@@ -11,16 +11,30 @@
     "lint:es": "next lint --fix",
     "lint:style": "stylelint \"**/*.css\" --fix --cache --cache-location node_modules/.cache/stylelint/",
     "------------------ ui command": "----",
-    "addsc": "pnpm dlx shadcn@latest add "
+    "addsc": "pnpm dlx shadcn@latest add ",
+    "------------------ db command": "----",
+    "dbg": "cross-env NODE_ENV=development prisma generate",
+    "dbp": "cross-env NODE_ENV=development prisma db push",
+    "dbmc": "cross-env NODE_ENV=development prisma migrate dev --create-only --skip-generate",
+    "dbm": "cross-env NODE_ENV=development prisma migrate dev --skip-seed",
+    "dbmr": "cross-env NODE_ENV=development prisma migrate reset -f --skip-seed",
+    "dbms": "cross-env NODE_ENV=development prisma migrate dev",
+    "dbmrs": "cross-env NODE_ENV=development prisma migrate reset -f",
+    "dbs": "prisma db seed",
+    "dbmd": "cross-env NODE_ENV=production prisma migrate deploy",
+    "dbo": "prisma studio",
+    "postinstall": "pnpm run dbm && pnpm run dbs && pnpm run dbg"
   },
   "prisma": {
-    "schema": "src/database/schema"
+    "schema": "src/database/schema",
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} -r tsconfig-paths/register src/database/seed/index.ts"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.22.1",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@faker-js/faker": "^9.3.0",
+    "@prisma/client": "6.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -36,6 +50,7 @@
     "lucide-react": "^0.469.0",
     "micromatch": "^4.0.8",
     "next": "15.1.3",
+    "prisma-paginate": "^5.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
