--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "pnpm lint:es && pnpm lint:style",
     "lint:es": "next lint --fix",
     "lint:style": "stylelint \"**/*.css\" --fix --cache --cache-location node_modules/.cache/stylelint/",
-    "------------------ ui command": "----",
+    "------------------ shadcn command": "----",
     "addsc": "pnpm dlx shadcn@latest add ",
     "------------------ db command": "----",
     "dbg": "cross-env NODE_ENV=development prisma generate",
@@ -25,22 +25,23 @@
     "dbo": "prisma studio",
     "postinstall": "pnpm run dbm && pnpm run dbs && pnpm run dbg"
   },
-  "prisma": {
-    "schema": "src/database/schema",
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} -r tsconfig-paths/register src/database/seed/index.ts"
-  },
   "dependencies": {
     "@ant-design/cssinjs": "^1.22.1",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@faker-js/faker": "^9.3.0",
-    "@prisma/client": "6.9.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.4",
+    "@prisma/client": "6.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
+    "@uiw/react-md-editor": "^4.0.5",
     "antd": "^5.22.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,15 +51,26 @@
     "lucide-react": "^0.469.0",
     "micromatch": "^4.0.8",
     "next": "15.1.3",
-    "prisma-paginate": "^5.2.2",
+    "next-mdx-remote-client": "^1.0.3",
+    "prism-themes": "^1.9.0",
+    "prisma-paginate": "^5.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-use": "^17.6.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-external-links": "^3.0.0",
+    "rehype-prism-plus": "^2.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-directive": "^3.0.0",
+    "remark-flexible-toc": "^1.1.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "unist-util-visit": "^5.0.0",
     "utility-types": "^3.11.0",
     "uuid": "^11.0.3",
+    "vfile": "^6.0.3",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
@@ -66,6 +78,7 @@
     "@eslint-react/eslint-plugin": "^1.23.0",
     "@eslint/eslintrc": "^3.2.0",
     "@types/lodash": "^4.17.13",
+    "@types/mdx": "^2.0.13",
     "@types/micromatch": "^4.0.9",
     "@types/node": "^22.10.3",
     "@types/react": "^19.0.2",
@@ -77,7 +90,7 @@
     "eslint-config-next": "15.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^4.4.0",
+    "eslint-plugin-perfectionist": "^4.5.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -90,18 +103,29 @@
     "postcss-nested": "^7.0.2",
     "postcss-nesting": "^13.0.1",
     "prettier": "^3.4.2",
-    "prisma": "^6.9.0",
+    "prisma": "^6.1.0",
     "rimraf": "^6.0.1",
-    "stylelint": "^16.20.0",
+    "stylelint": "^16.12.0",
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-tailwindcss": "^1.0.0",
     "stylelint-prettier": "^5.0.2",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2",
     "utility-types": "^3.11.0"
+  },
+  "prisma": {
+    "schema": "src/database/schema",
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} -r tsconfig-paths/register src/database/seed/index.ts"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowAny": [
+        "react",
+        "react-dom"
+      ]
+    }
   }
 }
