--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dbs": "prisma db seed",
     "dbmd": "cross-env NODE_ENV=production prisma migrate deploy",
     "dbo": "prisma studio",
-    "postinstall": "pnpm run dbm && pnpm run dbg"
+    "postinstall": "pnpm run dbm && pnpm run dbs && pnpm run dbg"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.22.1",
@@ -77,6 +77,7 @@
     "@antfu/eslint-config": "^3.12.1",
     "@eslint-react/eslint-plugin": "^1.23.0",
     "@eslint/eslintrc": "^3.2.0",
+    "@next/eslint-plugin-next": "^15.3.3",
     "@types/lodash": "^4.17.13",
     "@types/mdx": "^2.0.13",
     "@types/micromatch": "^4.0.9",
@@ -109,6 +110,7 @@
     "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-tailwindcss": "^1.0.0",
     "stylelint-prettier": "^5.0.2",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
