--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@faker-js/faker": "^9.3.0",
+    "@hookform/resolvers": "^5.1.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.4",
@@ -41,6 +42,9 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@ricons/fluent": "^0.13.0",
     "@uiw/react-md-editor": "^4.0.5",
     "antd": "^5.22.7",
     "class-variance-authority": "^0.7.1",
@@ -52,6 +56,7 @@
     "micromatch": "^4.0.8",
     "next": "15.1.3",
     "next-mdx-remote-client": "^1.0.3",
+    "pinyin": "^4.0.0",
     "prism-themes": "^1.9.0",
     "prisma-paginate": "^5.2.1",
     "react": "^19.0.0",
@@ -65,12 +70,14 @@
     "remark-directive": "^3.0.0",
     "remark-flexible-toc": "^1.1.1",
     "remark-gfm": "^4.0.0",
+    "segmentit": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0",
     "utility-types": "^3.11.0",
     "uuid": "^11.0.3",
     "vfile": "^6.0.3",
+    "zod": "^3.25.56",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
@@ -82,6 +89,7 @@
     "@types/mdx": "^2.0.13",
     "@types/micromatch": "^4.0.9",
     "@types/node": "^22.10.3",
+    "@types/pinyin": "^2.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "@types/uuid": "^10.0.0",
