--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,7 @@
     },
     "[jsonc]": {
         "editor.formatOnSave": true,
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
+        "editor.defaultFormatter": "vscode.json-language-features"
     },
     "[json]": {
         "editor.formatOnSave": true,
