--- a/package.json
+++ b/package.json
@@ -23,44 +23,55 @@
     "dbs": "prisma db seed",
     "dbmd": "cross-env NODE_ENV=production prisma migrate deploy",
     "dbo": "prisma studio",
-    "postinstall": "pnpm run dbm && pnpm run dbs && pnpm run dbg"
+    "postinstall": "pnpm run dbm && pnpm run dbs && pnpm run dbg & pnpm run gs",
+    "------------------ app command": "----",
+    "gs": "cross-env NODE_OPTIONS='--no-warnings=ExperimentalWarning' ts-node -r tsconfig-paths/register --compilerOptions '{\"module\":\"CommonJS\"}' src/server/auth/generate-secret.ts"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.22.1",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
-    "@faker-js/faker": "^9.3.0",
-    "@hono/swagger-ui": "^0.5.1",
-    "@hono/zod-openapi": "0.17.0",
-    "@hono/zod-validator": "^0.7.0",
-    "@hookform/resolvers": "^5.1.0",
+    "@faker-js/faker": "^9.4.0",
+    "@hono/swagger-ui": "^0.5.0",
+    "@hono/zod-openapi": "^0.17.0",
+    "@hono/zod-validator": "^0.4.2",
+    "@hookform/resolvers": "^3.10.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.4",
-    "@prisma/client": "6.1.0",
+    "@next/mdx": "^15.1.5",
+    "@prisma/client": "6.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@ricons/fluent": "^0.13.0",
     "@uiw/react-md-editor": "^4.0.5",
-    "antd": "^5.22.7",
+    "antd": "^5.23.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
+    "cookies-next": "^5.1.0",
+    "dayjs": "^1.11.13",
     "deepmerge": "^4.3.1",
-    "hono": "^4.7.11",
+    "hono": "^4.6.17",
     "immer": "^10.1.1",
+    "ioredis": "^5.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.469.0",
+    "lucide-react": "^0.473.0",
     "micromatch": "^4.0.8",
-    "next": "15.1.3",
-    "next-mdx-remote-client": "^1.0.3",
-    "pinyin": "^4.0.0",
+    "next": "15.1.5",
+    "next-mdx-remote-client": "^2.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pinyin": "4.0.0-alpha.2",
     "prism-themes": "^1.9.0",
     "prisma-paginate": "^5.2.1",
     "react": "^19.0.0",
@@ -79,55 +90,60 @@
     "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0",
     "utility-types": "^3.11.0",
-    "uuid": "^11.0.3",
+    "uuid": "^11.0.5",
     "vfile": "^6.0.3",
-    "zod": "^3.25.56",
-    "zustand": "^5.0.2"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.12.1",
-    "@eslint-react/eslint-plugin": "^1.23.0",
+    "@antfu/eslint-config": "^3.14.0",
+    "@eslint-react/eslint-plugin": "^1.23.2",
     "@eslint/eslintrc": "^3.2.0",
-    "@next/eslint-plugin-next": "^15.3.3",
-    "@types/lodash": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.14",
     "@types/mdx": "^2.0.13",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.10.3",
+    "@types/node": "^22.10.7",
+    "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/pinyin": "^2.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
+    "chalk": "^5.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "15.1.3",
-    "eslint-config-prettier": "^9.1.0",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "15.1.5",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-perfectionist": "^4.5.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-perfectionist": "^4.6.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "postcss": "^8.4.49",
+    "find-up": "^7.0.0",
+    "postcss": "^8.5.1",
     "postcss-import": "^16.1.0",
     "postcss-mixins": "^11.0.3",
     "postcss-nested": "^7.0.2",
     "postcss-nesting": "^13.0.1",
     "prettier": "^3.4.2",
-    "prisma": "^6.1.0",
+    "prisma": "^6.2.1",
     "rimraf": "^6.0.1",
-    "stylelint": "^16.12.0",
+    "stylelint": "^16.13.2",
     "stylelint-config-css-modules": "^4.4.0",
-    "stylelint-config-recess-order": "^5.1.1",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-config-tailwindcss": "^1.0.0",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-standard": "^37.0.0",
     "stylelint-prettier": "^5.0.2",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.2",
+    "typescript": "^5.7.3",
     "utility-types": "^3.11.0"
   },
   "prisma": {
@@ -135,15 +151,15 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} -r tsconfig-paths/register src/database/seed/index.ts"
   },
   "pnpm": {
-    "updateConfig": {
-      "ignoreDependencies": [
-        "@hono/zod-openapi"
-      ]
-    },
     "peerDependencyRules": {
       "allowAny": [
         "react",
         "react-dom"
+      ]
+    },
+    "updateConfig": {
+      "ignoreDependencies": [
+        "@hono/zod-openapi"
       ]
     }
   }
